samples/_failures_safe/1761301944_462899_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_569c6eed.c: In function ‘main’:
./samples/SAFE/__tmp_569c6eed.c:169:12: error: missing terminating " character
  169 |     printf("\nInitial
      |            ^~~~~~~~~~
./samples/SAFE/__tmp_569c6eed.c:169:5: error: expected expression at end of input
  169 |     printf("\nInitial
      |     ^~~~~~
./samples/SAFE/__tmp_569c6eed.c:169:5: error: expected declaration or statement at end of input
